# python-project

./: .gitignore  README.md  pyproject.toml
nb/: dev.py
proj/: __init__.py  main.py
proj/conf/: app.yaml  config.yaml
proj/conf/db/: dev.yaml
test/proj/: test_main.py
